--- a/SpearEngine/SpearEngine.vcxproj.filters
+++ b/SpearEngine/SpearEngine.vcxproj.filters
@@ -1,22 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="SpearCore">
+      <UniqueIdentifier>{99516b56-748e-4e8f-852f-13add77090f2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+    <Filter Include="SpearGraphics">
+      <UniqueIdentifier>{93c1a58d-0044-4604-b514-f76b1365dd0d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="SpearFlowstates">
+      <UniqueIdentifier>{4b5cb0c3-38f7-4d62-9658-09fceb65283e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\01_hello_SDL\01_hello_SDL.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="SpearMain.cpp">
+      <Filter>SpearCore</Filter>
     </ClCompile>
+    <ClCompile Include="FlowstateManager.cpp">
+      <Filter>SpearCore</Filter>
+    </ClCompile>
+    <ClCompile Include="ServiceLocator.cpp">
+      <Filter>SpearCore</Filter>
+    </ClCompile>
+    <ClCompile Include="Core.cpp">
+      <Filter>SpearCore</Filter>
+    </ClCompile>
+    <ClCompile Include="SDLManager.cpp">
+      <Filter>SpearGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="TestFlowstate.cpp">
+      <Filter>SpearFlowstates</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Core.h">
+      <Filter>SpearCore</Filter>
+    </ClInclude>
+    <ClInclude Include="FlowstateManager.h">
+      <Filter>SpearCore</Filter>
+    </ClInclude>
+    <ClInclude Include="ServiceLocator.h">
+      <Filter>SpearCore</Filter>
+    </ClInclude>
+    <ClInclude Include="SDLManager.h">
+      <Filter>SpearGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="TestFlowstate.h">
+      <Filter>SpearFlowstates</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
