--- a/SpearEngine/SpearEngine.vcxproj
+++ b/SpearEngine/SpearEngine.vcxproj
@@ -24,16 +24,15 @@
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="SDLManager.h" />
     <ClInclude Include="ServiceLocator.h" />
-    <ClInclude Include="TestFlowstate.h" />
     <ClInclude Include="MathVector.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\glad\src\glad.c" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="FlowstateManager.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="SDLManager.cpp" />
     <ClCompile Include="ServiceLocator.cpp" />
-    <ClCompile Include="TestFlowstate.cpp" />
     <ClCompile Include="MathVector.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -96,7 +95,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\SDL2-2.28.3\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\SDL2-2.28.3\include;$(SolutionDir)\glad\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\SDL2-2.28.3\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
