--- a/SpearGame/SpearGame.vcxproj
+++ b/SpearGame/SpearGame.vcxproj
@@ -91,7 +91,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\SDL2-2.28.3\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\SDL2-2.28.3\include;$(SolutionDir)\glad\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\SDL2-2.28.3\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
