--- a/SpearEngine/SpearEngine.vcxproj
+++ b/SpearEngine/SpearEngine.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="Core.h" />
     <ClInclude Include="FlowstateManager.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="LineRenderer.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="WindowManager.h" />
     <ClInclude Include="Renderer.h" />
@@ -34,6 +35,7 @@
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="FlowstateManager.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="LineRenderer.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="WindowManager.cpp" />
     <ClCompile Include="Renderer.cpp" />
