--- a/SpearEngine/SpearEngine.vcxproj
+++ b/SpearEngine/SpearEngine.vcxproj
@@ -26,6 +26,8 @@
     <ClInclude Include="ScreenRenderer.h" />
     <ClInclude Include="Raycaster.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="TextureArray.h" />
+    <ClInclude Include="TextureBase.h" />
     <ClInclude Include="WindowManager.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="ServiceLocator.h" />
@@ -40,6 +42,7 @@
     <ClCompile Include="ScreenRenderer.cpp" />
     <ClCompile Include="Raycaster.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="TextureArray.cpp" />
     <ClCompile Include="WindowManager.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ServiceLocator.cpp" />
