--- a/SpearEngine/SpearEngine.vcxproj.filters
+++ b/SpearEngine/SpearEngine.vcxproj.filters
@@ -54,6 +54,7 @@
     <ClCompile Include="UiButton.cpp">
       <Filter>Misc</Filter>
     </ClCompile>
+    <ClCompile Include="TextRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core.h">
@@ -101,5 +102,6 @@
     <ClInclude Include="UiButton.h">
       <Filter>Misc</Filter>
     </ClInclude>
+    <ClInclude Include="TextRenderer.h" />
   </ItemGroup>
 </Project>
