--- a/SpearEngine/SpearEngine.vcxproj
+++ b/SpearEngine/SpearEngine.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="Colour.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="FlowstateManager.h" />
+    <ClInclude Include="FrameProfiler.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="ScreenRenderer.h" />
     <ClInclude Include="Texture.h" />
@@ -39,6 +40,7 @@
     <ClCompile Include="..\thirdparty\glad\src\glad.c" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="FlowstateManager.cpp" />
+    <ClCompile Include="FrameProfiler.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="ScreenRenderer.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -78,7 +80,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -115,6 +117,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(SolutionDir)\thirdparty\glad\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\SDL2-2.28.3\lib\x64;$(LibraryPath)</LibraryPath>
+    <AllProjectBMIsArePublic>true</AllProjectBMIsArePublic>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
