--- a/SpearEngine/SpearEngine.vcxproj
+++ b/SpearEngine/SpearEngine.vcxproj
@@ -104,19 +104,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(SolutionDir)\thirdparty\glad\include;$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(SolutionDir)\thirdparty\glad\include;$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(SolutionDir)\thirdparty\glad\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\SDL2-2.28.3\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\thirdparty\glad\include;$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(IncludePath)</IncludePath>
+    <LibraryPath>
+    </LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(SolutionDir)\thirdparty\glad\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\SDL2-2.28.3\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\thirdparty\glad\include;$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(IncludePath)</IncludePath>
+    <LibraryPath>
+    </LibraryPath>
     <AllProjectBMIsArePublic>true</AllProjectBMIsArePublic>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
