--- a/SpearGame/SpearGame.vcxproj
+++ b/SpearGame/SpearGame.vcxproj
@@ -21,8 +21,9 @@
   <ItemGroup>
     <ClInclude Include="FlowstateEditor.h" />
     <ClInclude Include="FlowstateMenu.h" />
+    <ClInclude Include="GameState.h" />
     <ClInclude Include="LevelData.h" />
-    <ClInclude Include="LevelManager.h" />
+    <ClInclude Include="LevelFileManager.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="FlowstateGame.h" />
     <ClInclude Include="Raycaster.h" />
@@ -32,8 +33,9 @@
     <ClCompile Include="FlowstateEditor.cpp" />
     <ClCompile Include="FlowstateMenu.cpp" />
     <ClCompile Include="GameMain.cpp" />
+    <ClCompile Include="GameState.cpp" />
     <ClCompile Include="LevelData.cpp" />
-    <ClCompile Include="LevelManager.cpp" />
+    <ClCompile Include="LevelFileManager.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="FlowstateGame.cpp" />
     <ClCompile Include="Raycaster.cpp" />
