--- a/SpearEngine/SpearEngine.vcxproj.filters
+++ b/SpearEngine/SpearEngine.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="AssetManifest.cpp">
       <Filter>Misc</Filter>
     </ClCompile>
+    <ClCompile Include="MathVector.cpp">
+      <Filter>Maths</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core.h">
