--- a/SpearEngine/SpearEngine.vcxproj
+++ b/SpearEngine/SpearEngine.vcxproj
@@ -20,6 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioManager.h" />
+    <ClInclude Include="SoundSource.h" />
+    <ClInclude Include="StreamSource.h" />
+    <ClInclude Include="AudioUtils.h" />
     <ClInclude Include="Colour.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="AssetManifest.h" />
@@ -41,6 +44,9 @@
   <ItemGroup>
     <ClCompile Include="..\thirdparty\glad\src\glad.c" />
     <ClCompile Include="AudioManager.cpp" />
+    <ClCompile Include="SoundSource.cpp" />
+    <ClCompile Include="StreamSource.cpp" />
+    <ClCompile Include="AudioUtils.cpp" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="AssetManifest.cpp" />
     <ClCompile Include="FlowstateManager.cpp" />
@@ -119,13 +125,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\thirdparty\glad\include;$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\thirdparty\glad\include;$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(SolutionDir)\thirdparty\openal-soft-1.23.1\include;$(SolutionDir)\thirdparty\libsndfile-1.2.2\include;$(IncludePath)</IncludePath>
     <LibraryPath>
     </LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)\thirdparty\glad\include;$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\thirdparty\glad\include;$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(SolutionDir)\thirdparty\openal-soft-1.23.1\include;$(SolutionDir)\thirdparty\libsndfile-1.2.2\include;$(IncludePath)</IncludePath>
     <LibraryPath>
     </LibraryPath>
     <AllProjectBMIsArePublic>true</AllProjectBMIsArePublic>
