--- a/SpearGame/SpearGame.vcxproj
+++ b/SpearGame/SpearGame.vcxproj
@@ -109,13 +109,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(SolutionDir)\thirdparty\glad\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\thirdparty\SDL2-2.28.3\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(SolutionDir)\thirdparty\glad\include;$(SolutionDir)\thirdparty\openal-soft-1.23.1\include;$(SolutionDir)\thirdparty\libsndfile-1.2.2\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\thirdparty\SDL2-2.28.3\lib\x64;$(SolutionDir)\thirdparty\openal-soft-1.23.1\lib\x64;$(SolutionDir)\thirdparty\libsndfile-1.2.2\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(SolutionDir)\thirdparty\glad\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\thirdparty\SDL2-2.28.3\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\thirdparty\SDL2-2.28.3\include;$(SolutionDir)\thirdparty\glad\include;$(SolutionDir)\thirdparty\openal-soft-1.23.1\include;$(SolutionDir)\thirdparty\libsndfile-1.2.2\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\thirdparty\SDL2-2.28.3\lib\x64;$(SolutionDir)\thirdparty\openal-soft-1.23.1\lib\x64;$(SolutionDir)\thirdparty\libsndfile-1.2.2\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -161,7 +161,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;OpenAL32.lib;sndfile.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -182,7 +182,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;OpenAL32.lib;sndfile.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
