--- a/SpearEngine/SpearEngine.vcxproj
+++ b/SpearEngine/SpearEngine.vcxproj
@@ -19,7 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AudioEmitter.h" />
     <ClInclude Include="AudioManager.h" />
+    <ClInclude Include="GameObjectUtil.h" />
     <ClInclude Include="SoundSource.h" />
     <ClInclude Include="StreamSource.h" />
     <ClInclude Include="AudioUtils.h" />
@@ -28,6 +30,7 @@
     <ClInclude Include="AssetManifest.h" />
     <ClInclude Include="FlowstateManager.h" />
     <ClInclude Include="FrameProfiler.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="ScreenRenderer.h" />
     <ClInclude Include="Texture.h" />
@@ -43,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\thirdparty\glad\src\glad.c" />
+    <ClCompile Include="AudioEmitter.cpp" />
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="SoundSource.cpp" />
     <ClCompile Include="StreamSource.cpp" />
@@ -51,6 +55,7 @@
     <ClCompile Include="AssetManifest.cpp" />
     <ClCompile Include="FlowstateManager.cpp" />
     <ClCompile Include="FrameProfiler.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="MathVector.cpp" />
     <ClCompile Include="ScreenRenderer.cpp" />
